# plantilla_inicio

./: CMakeLists.txt  Makefile  README.md  archivo-tamaños.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble_inicial.c  ble_uart_server.c  ble_uart_server.h  ini_http_server.c  init_wifi.c  main.c  principal.h  simple_ota_example.c
main/TFT_LCD/: GFX_Library.c  ST7789.c  tft_lcd.c  tft_lcd.h
server_certs/: ca_cert.pem
